--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
   "root": true,
   "rules": {
     "comma-dangle": [ "error", "never" ],
-    "jsx-a11y/label-has-for": [ 0, {
+    "jsx-a11y/label-has-for": [ "off", {
             "components": [ "Label" ],
             "required": {
                 "every": [ "nesting", "id" ]
