--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
   "plugins": ["babel"],
   "root": true,
   "rules": {
+    "arrow-parens": ["error", "always"],
     "comma-dangle": [ "error", "never" ],
     "jsx-a11y/label-has-for": [ "off", {
             "components": [ "Label" ],
