make sure conversion doesn't trigger on change and update/clear form

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
                 "every": [ "nesting", "id" ]
             },
             "allowChildren": false
-        }]
+        }],
+    "react/destructuring-assignment": "off"
   }
 }
