--- a/package.json
+++ b/package.json
@@ -23,10 +23,17 @@
     "@zeit/next-sass": "^0.2.0",
     "babel-eslint": "^8.2.6",
     "next": "^6.1.1",
+    "next-redux-saga": "^3.0.0-beta.1",
+    "next-redux-wrapper": "^2.0.0",
     "node-sass": "^4.9.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-saga": "^0.16.0",
+    "reselect": "^3.0.1"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
