--- a/pages/.eslintrc
+++ b/pages/.eslintrc
@@ -1,12 +1,6 @@
 {
   "extends": "../.eslintrc",
   "rules": {
-    "jsx-a11y/label-has-for": [ 0, {
-            "components": [ "Label" ],
-            "required": {
-                "every": [ "nesting", "id" ]
-            },
-            "allowChildren": false
-        }]
+    "react/jsx-filename-extension": [1, {"extensions": [".js", ".jsx"] }]
   }
 }
