--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
             },
             "allowChildren": false
         }],
-    "react/destructuring-assignment": "off"
+    "react/destructuring-assignment": "off",
+    "jsx-a11y/anchor-is-valid": "off"
   }
 }
