--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "env": {
     "development": {
-      "presets": ["next/babel"]
+      "presets": ["next/babel", "@zeit/next-typescript/babel"]
     },
     "production": {
       "presets": ["next/babel"]
