--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "next build",
-    "dev": "next & json-server --watch api/time-entries.json & npm run test-watch",
+    "dev": "next & json-server --watch api/time-entries.json",
     "lint": "eslint --ext js,jsx .",
     "start": "next start",
     "test": "jest",
@@ -22,16 +22,16 @@
   },
   "homepage": "https://team-awesome-rik.now.sh",
   "dependencies": {
-    "@babel/core": "^7.0.0",
     "@zeit/next-sass": "^0.2.0",
+    "@zeit/next-typescript": "^1.1.0",
     "babel-eslint": "^8.2.6",
-    "next": "^6.1.1",
-    "next-redux-saga": "^3.0.0-beta.1",
+    "next": "^6.1.2",
+    "next-redux-saga": "^3.0.0",
     "next-redux-wrapper": "^2.0.0",
-    "node-sass": "^4.9.2",
+    "node-sass": "^4.9.3",
     "prop-types": "^15.6.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
@@ -39,18 +39,17 @@
     "reselect": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "babel-jest": "^23.4.2",
-    "enzyme": "^3.5.0",
-    "enzyme-adapter-react-16": "^1.3.0",
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-import": "^2.13.0",
+    "babel-jest": "^23.6.0",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
+    "eslint": "^5.6.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-babel": "^5.2.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-react": "^7.11.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.5.0",
+    "jest": "^23.6.0",
     "json-server": "^0.14.0"
   }
 }
