--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "next start",
     "test": "jest",
     "test-watch": "jest --watch",
-    "storybook": "start-storybook -p 9001 -c .storybook -s shared/"
+    "storybook": "npm run build && start-storybook .storybook -s ./ -p 9001 -c .storybook"
   },
   "repository": {
     "type": "git",
