update storybook config

--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,7 @@
       "presets": ["next/babel", "@zeit/next-typescript/babel"]
     },
     "production": {
-      "presets": ["next/babel"]
+      "presets": ["next/babel", "@zeit/next-typescript/babel"]
     },
     "test": {
       "presets": [["next/babel", { "preset-env": { "modules": "commonjs" } }]]
