--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "set-immediate-shim": "^2.0.0"
   },
   "devDependencies": {
+    "@storybook/addon-info": "^3.4.11",
     "babel-jest": "^23.6.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
