--- a/.eslintrc
+++ b/.eslintrc
@@ -21,5 +21,14 @@
     "react/destructuring-assignment": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "react/jsx-one-expression-per-line": "off"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["**/*.ts", "**/*.tsx"],
+      "parser": "typescript-eslint-parser",
+      "rules": {
+        "no-undef": "off"
+      }
+    }
+  ]
 }
