--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-react": "^7.11.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
-    "json-server": "^0.14.0"
+    "json-server": "^0.14.0",
+    "typescript-eslint-parser": "^18.0.0"
   }
 }
