implemented change requests

--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,6 @@
     "react/destructuring-assignment": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "react/jsx-one-expression-per-line": "off",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    "react/jsx-filename-extension": ["on", { "extensions": [".js", ".jsx"] }]
   }
 }
