--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,9 @@
         }],
     "react/destructuring-assignment": "off",
     "jsx-a11y/anchor-is-valid": "off",
-    "react/jsx-one-expression-per-line": "off"
+    "react/jsx-one-expression-per-line": "off",
+    'jsx-a11y/no-noninteractive-element-interactions': "off",
+    'jsx-a11y/no-noninteractive-tabindex': "off",
+    'jsx-a11y/no-noninteractive-element-to-interactive-role': "off"
   }
 }
